www/css/main.css
html {
    width: 100% !important;
    height: 100% !important;
}

body {
    font-size: 1em;
    font-family: LatoWeb;
    margin: 0 !important;
    padding: 0 !important;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    width: 100% !important;
    height: 100% !important;
}

.loading {
    position: fixed;
    top: 0;
    height: 0.7%;
    width: 100%;
}

.loading.hide {
    height: 0;
    opacity: 0;
    display: none;
}

.loadingBar {
    position: relative;
    background: white;
    height: 100%;
    left: 0%;
    opacity: 0.4;
    animation: move 2s infinite;
    -webkit-animation: move 2s infinite;
}

.noTask {
    margin: 50% auto !important;
    color: #ffffff;
    font-weight: bold;
    text-align: center;
}

@-webkit-keyframes move {
    from {
        width: 0;
    }
    to {
        width: 100%;
    }
}

@keyframes move {
    from {
        width: 0;
    }
    to {
        width: 100%;
    }
}

.mainContainer {
    bottom: 0;
    height: 100%;
    left: 0;
    overflow: hidden;
    position: fixed;
    right: 0;
    top: 0;
    width: 100%;
    background-image: linear-gradient(180deg, #4A00AA 0%, #00FFF4 93%);
}

.SplashContainer {
    bottom: 0;
    height: 100%;
    left: 0;
    overflow: hidden;
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
    color: #ffffff;

}

.grc-icon {
    position: absolute;
    width: 50%;
    height: 50%;
    margin: 0 25% !important;
    background-image: url('img/logo.png');
    background-repeat: no-repeat;
    background-position: center center;
    background-size: contain;
}

.splashTextContainer {
    position: relative;
    top: 50%;
    text-align: center;
    margin: 0 auto !important;
}

.line1 {
    font-size: 1.2em;
    margin: 0 0 1em 0;
}

.line1 span:first-child {
    font-family: LatoWebBlack;
}

.line1 span:last-child {
    font-family: LatoWeb;
}

.line2 span {
    font-family: LatoWebThin;
    font-size: 2.8em;
}

.fullScreen {
    width: 85%;
    height: 90%;
    margin: 5%;
    margin-top: 15%;
    border: 0px;
}

.headerContainer {
    height: 2em;
    padding: 0.25em;
}

.headerContainer > div.appName {
    text-align: center;
    color: #ffffff;
    font-weight: bold;
    margin: 0.5em 0 0.5em 0;
}

.pageTitle {
    position: fixed;
    top: 0;
    text-align: center;
    color: #ffffff;
    font-weight: bold;
    font-family: LatoWebThin;
    background-color: transparent;
    z-index: -1;
    left: 3em;
    right: 3em;
    padding: 0.6em;
    font-size: 1.25em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.pageContainer {
    position: absolute;
    bottom: 4em;
    top: 3em;
    right: 0.25em;
    overflow-y: scroll;
    left: 0.25em;
}

.zeroBottom {
    bottom: 0 !important;
}

.taskContainer {
    position: absolute;
    bottom: 4em;
    top: 3em;
    right: 5%;
    overflow-y: scroll;
    left: 5%;
    cursor: pointer;
    width: 90%;
}

.taskContainer > .task {
    padding: 1em;
    background: rgba(255, 255, 255, 1);
    position: relative;
    margin: 0 0 20px 0;
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

div.taskContainer > div.task > .titleContainer > .title {
    font-weight: bold;
    left: 0;
    width: 90%;
    max-width: 94% !important;
    overflow: hidden;
    text-overflow: ellipsis;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    display: -webkit-box;
}

div.taskContainer > div.task > .titleContainer > .endDate {
    font-family: LatoWebBold;
    font-size: 0.9em;
    float: right;
    margin: -1.5em 0 0;
    line-height: 1.1em;
    padding: 2px 5px 1px;
    border-radius: 3px;
}

.endDateAlert {
    background-color: #C70E0E;
    color: #ffffff;
    font-family: LatoWebBold;
}

div.taskContainer > div.task > .dept {
    margin: 0 0 0.25em;
    font-family: LatoWebThin;
    font-size: 0.9em;
}

div.taskContainer > div.task > .summary {
    width: 100%;
    margin: .25em 0;
    height: 3em;
    display: block;
    display: -webkit-box;
    line-height: 1em;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    font-family: LatoWebLight;
}

.packContainerInTaskList {
    height: 1.35em;
}

.packNameInTaskList {
    border: 1px solid #868686;
    border-radius: 8px;
    font-family: LatoWeb, arial, sans-serif;
    font-size: 0.9em;
    color: #868686;
    padding: 0.15em 0.5em 0em;
    float: left;
}

.taskResources {
    height: 1em;
    margin: 0 0 1em;
}

.taskResources img {
    margin: .25em;
}

.taskResources .resourceTitle {
    display: inline;
    max-width: 85% !important;
    height: 1em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    font-family: LatoWebLight;
    position: absolute;
    line-height: 1em;
    margin-top: 2px;
}

.resourceList {
    margin: 0.5em 0;
}

.tab_bar_text {
    font-family: "LatoWeb";
    color: rgb(104, 104, 113);
    text-align: center;
    margin: 0.5em 0 0 0;
}

.bottom_tab_active, .bottom_tab:active {
    color: rgb(0, 49, 100);
    font-weight: bold;
}

.backBtContainer {
    height: 1.9em;
    color: #ffffff;
    z-index: 100;
    background: transparent;
    cursor: pointer;
    float: left;
    position: fixed;
    padding: 0.15em 1em 0;
    top: 0;
    font-size: 1.5em;
}

.backIcon:before {
    content: "\f124";
}

.taskDetailsContainer, .container {
    position: absolute;
    z-index: 1;
    top: 3em;
    left: 0;
    bottom: 4em;
    margin: 0 0.5em 0.5em;
    padding: 1em 0.5em;
    width: 91%;
    color: #000;
    background-color: #ffffff;
    right: 0;
}

.taskDetailsContainer > div.titleContainer {
    margin: 0.5em 0 0 0;
}
/* ... */

